Updated introduction in index.html

--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
 
     <!-- Brief introduction paragraph -->
     <p>
-        I'm participating in the Summer School at Tinkerers’ Lab, IIT Hyderabad.
-        I’m learning Git, GitHub, Linux terminal commands, and basic HTML.
-        This is my first webpage!
+        I am exploring software development through the Summer School at IITH.
+    This week I learned Git, Linux CLI, HTML, and how to collaborate using GitHub.
     </p>
 
     <!-- Optional footer -->
